hphp/test/zend/bad/bug41633_2.php
<?php
class Foo {
	const A = self::B;
}
echo Foo::A."\n";
?>