hphp/test/zend/bad/bug41633_2.php.exp
HipHop Fatal error: Undefined class constant 'self::B' in %sbug41633_2.php on line 5
